# okx_data_saver

./: .env.example  .gitattributes  .gitignore  .gitmodules  COMPRESSION_ENUM_UPDATE.md  CPP_INTEGRATION_README.md  MIGRATION_REPORT.md  OFFLINE_INFERENCE.md  PROCESSOR_REDIS_INTEGRATION.md  README.md  WEB_GUI.md  enumerations.py  requirements.txt  settings.py  test_compression_enum.py  test_data_validation.py  test_integration.py  test_polars_conversion.py  test_processor_redis_integration.py  test_redis_migration.py
.cursor/rules/: common_rules.mdc
ai_code/: README_migration.md  aggregation_horizons_time_stats.py  check_tables_integrity.py  delete_incorrect_records.py  export_okx_data_set_to_csv.py  import_trades_csv_to_db.py  migrate_symbol_name_to_symbol_id.py  migrate_trade_data_2_to_3.py  requirements_migration.txt  test_migration.py
benchmarks/: performance_benchmark.py
config/: cpp_processor_config.py
constants/: common.py  okx.py  plot.py  redis.py  symbol.py
cpp_data_processor/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  integration.py  requirements.txt  setup.py  test_build.py
cpp_data_processor/examples/: CMakeLists.txt  basic_example.cpp  integration_example.py
cpp_data_processor/include/: bollinger_bands.h  candles_processor.h  data_structures.h  extreme_lines_processor.h  main_processor.h  order_book_processor.h  redis_client.h  rsi_calculator.h  smoothing_processor.h  velocity_calculator.h
cpp_data_processor/src/: bollinger_bands.cpp  candles_processor.cpp  data_structures.cpp  extreme_lines_processor.cpp  main_processor.cpp  order_book_processor.cpp  python_bindings.cpp  redis_client.cpp  rsi_calculator.cpp  smoothing_processor.cpp  velocity_calculator.cpp
cpp_data_processor/tests/: CMakeLists.txt  test_main.cpp
cpp_final_data_set_saver/: CMakeLists.txt  README.md
cpp_final_data_set_saver/examples/: CMakeLists.txt  basic_usage.cpp
cpp_final_data_set_saver/include/: data_structures.h
cpp_final_data_set_saver/include/database/: database_connection.h  database_query.h  database_transaction.h
cpp_final_data_set_saver/include/processors/: data_set_calculator.h  main_loop.h
cpp_final_data_set_saver/include/utils/: config.h  decimal.h  logger.h
cpp_final_data_set_saver/scripts/: build.sh  install_dependencies.sh  run.sh
cpp_final_data_set_saver/src/: main.cpp
cpp_final_data_set_saver/src/database/: database_connection.cpp  database_query.cpp  database_transaction.cpp
cpp_final_data_set_saver/src/processors/: data_set_calculator.cpp  main_loop.cpp
cpp_final_data_set_saver/src/utils/: config.cpp  decimal.cpp  logger.cpp
cpp_final_data_set_saver/test/: CMakeLists.txt
cpp_final_data_set_saver/test/integration/: test_database_integration.cpp
cpp_final_data_set_saver/test/unit/: test_calculations.cpp  test_config.cpp  test_data_set_calculator.cpp  test_database_connection.cpp  test_database_query.cpp  test_database_transaction.cpp  test_decimal.cpp  test_performance.cpp
cursor_deprecated/: okx_data_saver.mdc  okx_data_saver_old.mdc
enumerations/: __init__.py  compression.py
event/: __init__.py  async_.py
main/: runtime_limits.py  spawn_process.py
main/inference_daemon/: __main__.py
main/offline_inference/: artifacts.py  atomic_io.py  inference_cycle.py  paths.py  trade_research_export.py  trade_research_loader.py  trading_bot_imports.py
main/process_data/: __main__.py  cpp_data_processor_wrapper.py  data_processor.py  data_set_record_fetcher.py  data_validator.py  globals.py  hybrid_data_processor.py  monitoring.py  performance_optimizer.py  redis_service.py  schemas.py
main/save_candles/: __main__.py  globals.py  schemas.py
main/save_final_data_set/: __main__.py  globals.py  schemas.py
main/save_final_data_set_2/: __main__.py  globals.py  schemas.py
main/save_final_data_set_3/: __main__.py  schemas.py
main/save_order_books/: __main__.py  constants_.py  globals.py  models.py  okx_web_socket_connection_manager.py  schemas.py
main/save_trades/: __main__.py  schemas.py
main/show_plot/: __main__.py  globals.py  processor.py  processor_old.py  redis_data_adapter.py  redis_processor.py  window.py
main/show_plot/gui/: window.py
main/show_plot/gui/item/: candlestick.py  datetime_axis.py  datetime_by_trade_id_axis.py  rect.py
main/show_plot_2/: __main__.py  globals.py  processor.py
main/show_plot_2/gui/: window.py
main/show_plot_2/gui/item/: candlestick.py  datetime_axis.py  datetime_by_trade_id_axis.py  rect.py
main/trade_research_export/: __main__.py
main/web_gui/: __init__.py  __main__.py  aggregation.py  api.py  async_data_runtime.py  bars_cache_service.py  constants.py  data_service.py  dow_service.py  exit_policy_service.py  exit_transformer_service.py  inference_artifact_service.py  inference_service.py  request_workers.py  serialization.py  trade_journal_service.py  trade_research_artifact_service.py  trade_research_service.py
main/web_gui/static/: app.js  index.html  style.css
scripts/: deploy_cpp_processor.py  deploy_cpp_processor.sh
test/: simple_test.py  test_build.py  test_integration.py  test_polars_conversion.py  test_polars_dataframes.py  test_processor_redis_integration.py  test_redis_integration.py
utils/: async_.py  json.py  proxy.py  qt.py  redis.py  serialization.py  telegram.py  time.py  trading.py
